fix: stop selecting text on mobile while double tapping the buttons

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,15 @@ body {
     margin: 0;
     background-color: #f2b991;
     min-width: 415px;
+    /* https://www.arungudelli.com/tutorial/css/disable-text-selection-in-html-using-user-select-css-property/ */
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+
 } 
+
 
 h1 {
     font-size: 1rem;
